# cmd/server/main.go
@@ -5,11 +5,12 @@ import (
 	"log"
 	"os"
 
+	_ "github.com/DGreegman/gohunt/docs"
 	"github.com/DGreegman/gohunt/internal/api"
 	"github.com/DGreegman/gohunt/internal/database"
+	"github.com/DGreegman/gohunt/internal/fetcher"
 	"github.com/gofiber/fiber/v2"
 	"github.com/joho/godotenv"
-	_ "github.com/DGreegman/gohunt/docs"
 	fiberSwagger "github.com/swaggo/fiber-swagger"
 )
 
@@ -39,23 +40,9 @@ func main() {
 
 	log.Println("Connected to Database")
 
-	// src := fetcher.NewRemotiveSource()
-	// store := fetcher.NewStore(pool)
-
-	// jobs, err := src.FetchJobs(ctx)
-	// if err != nil {
-	// 	log.Fatalf("Fetch Failed: %v", err)
-	// }
-
-	// inserted, err := store.SaveJobs(ctx, jobs)
-
-	// if err != nil {
-	// 	log.Fatalf("Saved failed: %v", err)
-	// }
-
-	// log.Printf("Fetched %d jobs, inserted %d new (from %s)", len(jobs), inserted, src.Name())
-
-	handler := api.NewHandler(pool)
+	source := fetcher.NewRemotiveSource()
+	store := fetcher.NewStore(pool)
+	handler := api.NewHandler(pool, source, store)
 
 	app := fiber.New(fiber.Config{
 		AppName: "GoHunt v1.1",
@@ -68,6 +55,7 @@ func main() {
 		})
 	})
 	app.Get("/api/jobs", handler.ListJobs)
+	app.Post("/api/fetch/trigger", handler.TriggerFetch)
 	app.Get("/swagger/*", fiberSwagger.WrapHandler)
 	log.Fatal(app.Listen(":8080"))
 }
